# Psych-Report-Table-Maker

./: .gitignore  Psych Report Table Maker.sln  README.md
.github/workflows/: main.yml
Psych Report Table Maker/: AddBattery.Designer.vb  AddBattery.resx  AddBattery.vb  AddDisplayTable.Designer.vb  AddDisplayTable.vb  AddDisplayTableMarker.Designer.vb  AddDisplayTableMarker.vb  AddPerson.Designer.vb  AddPerson.vb  AddRangeLabel.Designer.vb  AddRangeLabel.resx  AddRangeLabel.vb  AddScale.Designer.vb  AddScale.vb  AddScoreType.Designer.vb  AddScoreType.vb  Psych Report Table Maker.vbproj  Psych Report Table Maker_1_TemporaryKey.pfx  Psych Report Table Maker_2_TemporaryKey.pfx  Psych Report Table Maker_TemporaryKey.pfx  SelectDisplayTables.Designer.vb  SelectDisplayTables.resx  SelectDisplayTables.vb  SplashScreen1.Designer.vb  SplashScreen1.resx  TableMaker.Designer.vb  TableMaker.resx  TableMaker.sdf  TableMaker.vb  packages.config  tmDataSet.Designer.vb  tmDataSet.dgml  tmDataSet.xsc  tmDataSet.xsd  tmDataSet.xss
Psych Report Table Maker/My Project/: Application.Designer.vb  Application.myapp  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb  Settings.settings
tauri-app/: package.json
tauri-app/frontend/: index.html
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/__MACOSX/src-tauri/: ._Cargo.toml
tauri-app/src-tauri/src/: db.rs  lib.rs  main.rs
tauri-app/src-tauri/src-tauri/: Cargo.toml
tauri-app/src-tauri/tests/: database.rs  db_tests.rs
