[package]
name = "tauri_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.30"
 docx-rs = { version = "0.4.18-rc19" }

[dev-dependencies]
tempfile = "3"
[build-dependencies]
tauri-build = "1"
